create chat screen
