# BackEnd/docs/swagger.json
@@ -393,6 +393,47 @@
                 }
             }
         },
+        "/chat/users-with-last-message": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieves users and their last message exchanged with the authenticated user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chat"
+                ],
+                "summary": "Get users with the last message in both directions",
+                "responses": {
+                    "200": {
+                        "description": "List of users with their last message",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "additionalProperties": true
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error retrieving users and messages",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/item/create-item": {
             "post": {
                 "security": [
